--- a/_config.yml
+++ b/_config.yml
@@ -1,145 +1,138 @@
-# Basic Site Settings
-locale                   : "en-US"
-site_theme               : "default"
-title                    : "Dr. Farrukh Aziz - AI, Behavioral Sciences & Management"
-title_separator          : "-"
-name                     : &name "Dr. Farrukh Aziz"
-description              : &description "PhD Researcher at Dalian University of Technology | AI-driven decision-making, leadership, lean manufacturing & financial risk management"
-url                      : https://engrfarrukhaziz.github.io
-baseurl                  : ""
-repository               : "engrfarrukhaziz/engrfarrukhaziz.github.io"
+# ================================
+#       Jekyll Site Config
+# ================================
 
-# Site Author - sidebar profile info
+# --- Basic Site Info ---
+locale: "en-US"
+site_theme: "default"
+title: "Dr. Farrukh Aziz | AI, Leadership & Behavioral Sciences"
+title_separator: "—"
+name: &name "Dr. Farrukh Aziz"
+description: &description "PhD Researcher at Dalian University of Technology | AI-driven decision-making | Leadership impact | Lean manufacturing | Financial risk management"
+url: https://engrfarrukhaziz.github.io
+baseurl: ""     # e.g., "/blog" if hosted in a subfolder
+repository: "engrfarrukhaziz/engrfarrukhaziz.github.io"
+
+# --- Author Profile (Sidebar & Sitewide) ---
 author:
-  avatar           : "profile.png"
-  name             : "Dr. Farrukh Aziz"
-  pronouns         : "he/him"
-  bio              : "PhD researcher at Dalian University of Technology specializing in AI-driven decision-making, leadership impact on workplace behavior, lean manufacturing, and financial risk management."
-  location         : "Dalian, China"
-  employer         : "Dalian University of Technology"
-  uri              : "https://engrfarrukhaziz.github.io"
-  email            : "engrfarrukhaziz@mail.dlut.edu.cn"
+  avatar: "profile.png"                    # Place your profile picture here
+  name: "Dr. Farrukh Aziz"
+  pronouns: "he/him"
+  bio: >
+    Passionate about blending AI with behavioral science to transform decision-making and leadership.
+    Currently pursuing PhD at Dalian University of Technology, China.
+  location: "Dalian, China"
+  employer: "Dalian University of Technology"
+  uri: "https://engrfarrukhaziz.github.io"
+  email: "engrfarrukhaziz@mail.dlut.edu.cn"
 
-  # Academic websites
-  academia         : ""
-  arxiv            : ""
-  googlescholar    : "https://scholar.google.com/citations?hl=en&user=ulUkkPus9M0C"
-  inspire-hep      : ""
-  impactstory      : ""
-  orcid            : "https://orcid.org/0000-0001-7088-0371"
-  semantic         : ""
-  pubmed           : ""
-  researchgate     : "https://www.researchgate.net/profile/Farrukh-Aziz-6"
-  scopus           : ""
+  # Academic Profiles
+  academia: ""
+  arxiv: ""
+  googlescholar: "https://scholar.google.com/citations?hl=en&user=ulUkkPus9M0C"
+  inspire-hep: ""
+  impactstory: ""
+  orcid: "https://orcid.org/0000-0001-7088-0371"
+  semantic: ""
+  pubmed: ""
+  researchgate: "https://www.researchgate.net/profile/Farrukh-Aziz-6"
+  scopus: ""
 
-  # Repositories and software development
-  bitbucket        : ""
-  codepen          : ""
-  dribbble         : ""
-  github           : "engrfarrukhaziz"
-  kaggle           : ""
-  stackoverflow    : ""
+  # Code & Development
+  bitbucket: ""
+  codepen: ""
+  dribbble: ""
+  github: "engrfarrukhaziz"
+  kaggle: ""
+  stackoverflow: ""
 
-  # Social media
-  artstation       : ""
-  bluesky          : ""
-  facebook         : ""
-  flickr           : ""
-  foursquare       : ""
-  goodreads        : ""
-  google_plus      : ""
-  keybase          : ""
-  instagram        : ""
-  lastfm           : ""
-  linkedin         : ""
-  mastodon         : ""
-  medium           : ""
-  pinterest        : ""
-  soundcloud       : ""
-  steam            : ""
-  telegram         : ""
-  tumblr           : ""
-  twitter          : ""
-  vine             : ""
-  weibo            : ""
-  wikipedia        : ""
-  xing             : ""
-  youtube          : ""
-  zhihu            : ""
+  # Social Media Handles (Fill as needed)
+  twitter: ""
+  linkedin: ""
+  facebook: ""
+  instagram: ""
+  mastodon: ""
+  telegram: ""
+  youtube: ""
 
-# Publication Category Headings
+# --- Publications Categories ---
 publication_category:
   books:
-    title: 'Books'
+    title: "Books"
   manuscripts:
-    title: 'Journal Articles'    
+    title: "Journal Articles"
   conferences:
-    title: 'Conference Papers'
+    title: "Conference Papers"
 
-# Site Settings
-teaser                   : 
-breadcrumbs              : false
-words_per_minute         : 160
-future                   : true
-read_more                : "disabled"
-talkmap_link             : false
+# --- Site Appearance & Behavior ---
+teaser: ""                      # e.g., "banner.jpg" to show a homepage teaser image
+breadcrumbs: false
+words_per_minute: 160
+future: true
+read_more: "disabled"
+talkmap_link: false
+
+# --- Comments System ---
 comments:
-  provider               : false
+  provider: false               # Options: false, disqus, discourse, facebook, google-plus, staticman, custom
   disqus:
-    shortname            : ""
+    shortname: ""
   discourse:
-    server               : ""
+    server: ""
   facebook:
-    appid                : ""
-    num_posts            : 
-    colorscheme          : ""
+    appid: ""
+    num_posts: 5
+    colorscheme: "light"
 staticman:
-  allowedFields          : ['name', 'email', 'url', 'message']
-  branch                 : "gh-pages"
-  commitMessage          : "New comment."
-  filename               : comment-{@timestamp}
-  format                 : "yml"
-  moderation             : true
-  path                   : "_data/comments/{options.slug}"
-  requiredFields         : ['name', 'email', 'message']
+  allowedFields: ['name', 'email', 'url', 'message']
+  branch: "gh-pages"
+  commitMessage: "New comment."
+  filename: comment-{@timestamp}
+  format: "yml"
+  moderation: true
+  path: "_data/comments/{options.slug}"
+  requiredFields: ['name', 'email', 'message']
   transforms:
-    email                : "md5"
+    email: "md5"
   generatedFields:
     date:
-      type               : "date"
+      type: "date"
       options:
-        format           : "iso8601"
+        format: "iso8601"
+
+# --- RSS & Feeds ---
 atom_feed:
-  hide                   : false
-  path                   : 
+  hide: false
+  path: ""
 
-# SEO Verification
-google_site_verification :
-bing_site_verification   :
-alexa_site_verification  :
-yandex_site_verification :
+# --- SEO Verification Tokens (if any) ---
+google_site_verification: ""
+bing_site_verification: ""
+alexa_site_verification: ""
+yandex_site_verification: ""
 
-# Social Sharing Defaults
+# --- Social Sharing Defaults ---
 twitter:
-  username               : ""
+  username: ""
 facebook:
-  username               : ""
-  app_id                 : ""
-  publisher              : ""
-og_image                 : 
-og_description           : 
+  username: ""
+  app_id: ""
+  publisher: ""
+og_image: ""
+og_description: ""
+
 social:
-  type                   : Person
-  name                   : "Dr. Farrukh Aziz"
+  type: Person
+  name: "Dr. Farrukh Aziz"
   links: []
 
-# Analytics
+# --- Analytics ---
 analytics:
-  provider               :  "false"
+  provider: "false"             # Options: false, google, google-universal, google-analytics-4, custom
   google:
-    tracking_id          : ""
+    tracking_id: ""
 
-# Reading Files
+# --- Site Content Handling ---
 include:
   - .htaccess
   - _pages
@@ -171,20 +164,21 @@ exclude:
   - README
   - tmp
   - vendor
+
 keep_files:
   - .git
   - .svn
+
 encoding: "utf-8"
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 
-# Conversion
+# --- Markdown & Syntax Highlighting ---
 markdown: kramdown
 highlighter: rouge
 lsi: false
 excerpt_separator: "\n\n"
 incremental: false
 
-# Markdown Processing
 kramdown:
   input: GFM
   hard_wrap: false
@@ -195,7 +189,7 @@ kramdown:
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
 
-# Collections
+# --- Collections & Permalinks ---
 collections:
   teaching:
     output: true
@@ -210,7 +204,7 @@ collections:
     output: true
     permalink: /:collection/:path/
 
-# Defaults for pages and collections
+# --- Defaults for content types ---
 defaults:
   - scope:
       path: ""
@@ -260,16 +254,16 @@ defaults:
       author_profile: true
       share: true
 
-# Sass/SCSS
+# --- Styling ---
 sass:
   sass_dir: _sass
   style: compressed
 
-# Outputting
+# --- URL Structure ---
 permalink: /:categories/:title/
 timezone: Etc/UTC
 
-# Plugins
+# --- Plugins ---
 plugins:
   - jekyll-feed
   - jekyll-gist
@@ -278,7 +272,6 @@ plugins:
   - jekyll-redirect-from
   - jemoji
 
-# Mimic GitHub Pages with --safe
 whitelist:
   - jekyll-feed
   - jekyll-gist
@@ -287,7 +280,7 @@ whitelist:
   - jekyll-redirect-from
   - jemoji
 
-# Archives config
+# --- Archives Configuration ---
 category_archive:
   type: liquid
   path: /categories/
@@ -295,7 +288,7 @@ tag_archive:
   type: liquid
   path: /tags/
 
-# HTML Compression
+# --- HTML Compression for Performance ---
 compress_html:
   clippings: all
   ignore:
